--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "statman-stopwatch": "^2.7.0",
     "zetta": "^1.5.1",
-    "bonescript": "~0.5.0-beta7",
-    "zetta-led-bonescript-driver": "~0.6.0"
+    "bonescript": "^0.7.0",
+    "zetta-led-bonescript-driver": "^0.6.0"
   }
 }
