--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bonescript": "^0.7.0",
     "getmac": "^1.4.6",
     "statman-stopwatch": "^2.7.0",
+    "yargs": "^12.0.5",
     "zetta": "^1.5.1",
     "zetta-led-bonescript-driver": "^0.6.0"
   }
