--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "getmac": "^1.4.6",
     "statman-stopwatch": "^2.7.0",
     "yargs": "^12.0.5",
-    "zetta": "^1.5.1",
-    "zetta-led-bonescript-driver": "^0.6.0"
+    "zetta": "^1.5.1"
   }
 }
