added command line device for updating code and restarting the processes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bonescript": "^0.7.0",
     "getmac": "^1.4.6",
+    "shelljs": "^0.8.3",
     "statman-stopwatch": "^2.7.0",
     "yargs": "^12.0.5",
     "zetta": "^1.5.1"
