--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/landlessness/smart-tap#readme",
   "dependencies": {
     "bonescript": "^0.7.0",
+    "format-duration": "^1.3.1",
     "getmac": "^1.4.6",
     "shelljs": "^0.8.3",
     "statman-stopwatch": "^2.7.0",
